--- a/NordicDoorWeb/appsettings.json
+++ b/NordicDoorWeb/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MariaDb": "Server=localhost;Port=4567;User ID=root;Password=Testingtesting1234;Database=nordic_door;Allow User Variables=true;"
+
+  }
+
+
 }
