--- a/NordicDoorWeb/appsettings.json
+++ b/NordicDoorWeb/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MariaDb": "Server=localhost;Port=4567;User ID=root;Password=Testingtesting1234;Database=nordic_door;Allow User Variables=true;"
+    "MariaDb": "Server=172.17.0.1;Port=4567;User ID=root;Password=Testingtesting1234;Database=nordic_door;Allow User Variables=true;"
 
   }
 
